Fix use-after-move in media/webrtc permission prompting code

Accessing a unique_ptr in the same call expression that moves it is
generally not safe, since different compilers evaluate have different
orders of evaluation.

BUG=714609
TBR=raymes@chromium.org,thakis@chromium.org

Review-Url: https://codereview.chromium.org/2842493003
Cr-Commit-Position: refs/heads/master@{#466830}

Former-commit-id: 27ae42407b0effd81dd43d7542305f5cc1aa1d58